--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.2",
+    "vite": "^7.1.7"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -32,7 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "jsdom": "^27.1.0",
-    "vite": "^7.1.7",
+    
     "vitest": "^4.0.8"
   }
 }
